# cmsstyle

./: .gitattributes  .gitignore  CMS_lumi.C  CMS_lumi.py  LICENSE  README.md  example.py  histo.root  mkdocs.yml  myMacro.C  myMacro.py  pyproject.toml  setup.py  tdrstyle.C  tdrstyle.py
.github/workflows/: cd.yml  resultchecks.yml  ruff.yml  softwarecheck.yml
CMSstyle/: CMSstyle.py  __init__.py
docs/: index.md  reference.md  requirements.txt
scripts/: check_integrity.sh  setup_cmstyle
src/: TCmsCanvas.H  cmsstyle.C  cmsstyle.H  colorsets.H
src/cmsstyle/: __init__.py  _utils.py  _version.py  cmsstyle.py
tdrstyle/: __init__.py
tests/: example.py  example_palette.py  example_palettes.py  example_stack.py  test_THStack.C  test_THStack.py  test_cms2DHisto.C  test_cms2DHisto.py  test_cmsCanvas.C  test_cmsCanvas.py  test_color_sets.C  test_subplots.py
