[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/cmsstyle/_version.py"
build.exclude = [
  ".git*",
  "tests/",
]


[project]
name = "cmsstyle"
dynamic = ["version"]
readme = "README.md"
authors = [
  { name = "Andrzej Novak", email = "andrzej.novak@cern.ch" },
  { name = "Tommaso Tedeschi", email = "tommaso.tedeschi@cern.ch" },
  { name = "Clemens Lange", email = "clemens.lange@cern.ch" },
  { name = "Piergiulio Lenzi", email = "piergiulio.lenzi@cern.ch" },
  { name = "Andrea Malara", email = "andrea.malara@cern.ch" },
]
maintainers = [
  { name = "CMS CAT Group", email = "cms-phys-conveners-CAT@cern.ch" },
]
requires-python = ">=3.7"

dependencies = [
  "typing_extensions",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/cms-cat/cms-root-style"
Documentation = "https://github.com/cms-cat/cms-root-style"
"Bug Tracker" = "https://github.com/cms-cat/cms-root-style/issues"
Discussions = "https://github.com/cms-cat/cms-root-style/discussions"

